<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.AddIncomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/button_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/cash_income"
            android:textColor="#334155"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:text="@string/save"
            android:textColor="#00A300"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line_action_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#334155"
        app:layout_constraintTop_toBottomOf="@id/wrapper_action_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_destination"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/destination"
        android:textColorHint="#94A3B8"
        app:layout_constraintTop_toBottomOf="@id/line_action_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textColor="#334155"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_income"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/from"
        android:textColorHint="#94A3B8"
        app:layout_constraintTop_toBottomOf="@id/layout_destination">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_source_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textColor="#334155"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nominal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/nominal"
        android:textColorHint="#94A3B8"
        app:layout_constraintTop_toBottomOf="@id/layout_income">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textColor="#334155"
            android:inputType="number"
            android:maxLength="11"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/description"
        android:textColorHint="#94A3B8"
        app:layout_constraintTop_toBottomOf="@id/layout_nominal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textColor="#334155"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/type"
        android:textColorHint="#94A3B8"
        app:layout_constraintTop_toBottomOf="@id/layout_desc">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/type_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textColor="#334155"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_desc_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="12sp"
        android:text="@string/desc_image"
        android:textColor="#334155"
        app:layout_constraintTop_toBottomOf="@id/layout_type"/>
    
    <TextView
        android:id="@+id/btn_add_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:background="@drawable/bg_grey_slate100_rounded12"
        android:fontFamily="sans-serif-medium"
        android:textSize="12sp"
        android:text="@string/photo"
        android:textColor="#00A300"
        app:layout_constraintTop_toBottomOf="@id/txt_desc_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/result_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/btn_add_photo"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_photo"
        app:layout_constraintStart_toStartOf="@id/btn_add_photo"
        app:layout_constraintEnd_toEndOf="@id/btn_add_photo"/>
</androidx.constraintlayout.widget.ConstraintLayout>