<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".presentation.fragments.ConfirmFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:text="@string/confirm"
            android:textColor="#334155"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="4dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:text="@string/confirm_delete"
            android:textColor="#475569"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:shapeAppearance="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="#00A300"
            app:cornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            app:shapeAppearance="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="#FF6150"
            app:cornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>