<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_blue50_rounded12"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_source_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="11sp"
        tools:text="Dari Bos ke Kasir Perangkat 1"
        android:textColor="#334155"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_time"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="11sp"
        tools:text="13:00"
        android:textColor="#334155"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="11sp"
        tools:text="Tambahan Modal"
        android:textColor="#334155"
        app:layout_constraintTop_toBottomOf="@id/tv_source_income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_nominal"/>

    <TextView
        android:id="@+id/tv_nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="11sp"
        tools:text="Rp 100.000"
        android:textColor="#334155"
        app:layout_constraintTop_toBottomOf="@id/tv_time"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc">

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:text="@string/edit"
            android:textColor="#1A8CFF"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_baseline_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="4dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:text="@string/delete"
            android:textColor="#FF6150"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_baseline_trash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_edit"/>

        <TextView
            android:id="@+id/btn_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:text="@string/show_image"
            android:textColor="#4d94ff"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>